[metadata]
name = highlander
version = 2015.1.1
summary = Highlander Project
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = https://launchpad.net/highlander
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Openstack Highlander Team
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    highlander

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    highlander-server = highlander.cmd.launch:main
    #highlander-db-manage = highlander.db.sqlalchemy.migration.cli:main

highlander.actions =
    std.async_noop = highlander.actions.std_actions:AsyncNoOpAction
    std.noop = highlander.actions.std_actions:NoOpAction
    std.fail = highlander.actions.std_actions:FailAction
    std.echo = highlander.actions.std_actions:EchoAction
    std.http = highlander.actions.std_actions:HTTPAction
    std.highlander_http = highlander.actions.std_actions:HighlanderHTTPAction
    std.ssh = highlander.actions.std_actions:SSHAction
    std.email = highlander.actions.std_actions:SendEmailAction
    std.javascript = highlander.actions.std_actions:JavaScriptAction
